--- a/School/WebApplication1/Views/HangHoa/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/HangHoa/_ListPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<HangHoaModel>
 
-    <table class="table tbl-contents">
+    <table id="myTable" class="table tbl-contents">
         <tbody>
             @{
                 var count = 0;
