--- a/School/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/School/WebApplication1/Views/Shared/_Layout.cshtml
@@ -18,6 +18,11 @@
     <link href="~/css/app-style.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
     @* end libs theme *@
+
+    @*Theme Hai*@
+    <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.11.3/b-2.1.1/fc-4.0.1/sc-2.0.5/sb-1.3.0/sp-1.4.0/sl-1.3.3/datatables.min.css" />-->
+    @*End theme Hai*@
 </head>
 <body class="">
 
