--- a/School/WebApplication1/Views/HangHoa/List.cshtml
+++ b/School/WebApplication1/Views/HangHoa/List.cshtml
@@ -29,24 +29,24 @@
             <div class="card-body">
                 <table id="myTable" class="thead-content">
                     <thead class=" text-primary">
-                        <tr>
-                            <th class="w-5p">
-                                STT
-                            </th>
-                            <th class="w-15p">
-                                Tên Hàng Hóa
-                            </th>
-                            <th class="w-12p">
-                                Số Lượng
-                            </th>
-                            <th class="w-10p">
-                                Đơn Giá
-                            </th>
-                            <th class="w-10p">
-                                Chi Tiết
-                            </th>
-                            <th class="w-8p">Thao tác</th>
-                        </tr>
+                    <tr>
+                        <th class="w-5p">
+                            STT
+                        </th>
+                        <th class="w-15p">
+                            Tên Hàng Hóa
+                        </th>
+                        <th class="w-12p">
+                            Số Lượng
+                        </th>
+                        <th class="w-10p">
+                            Đơn Giá
+                        </th>
+                        <th class="w-10p">
+                            Chi Tiết
+                        </th>
+                        <th class="w-8p">Thao tác</th>
+                    </tr>
                 </table>
 
                 <div class="table-responsive" id="hanghoa-list">
@@ -58,13 +58,13 @@
     </div>
 </div>
 
-    <div style="margin: 0 auto">
-        @await Html.PartialAsync("Pagination", paging)
-    </div>
+<div style="margin: 0 auto" id="sec-pagination">
+    @await Html.PartialAsync("Pagination", paging)
+</div>
 
-    <script src="~/js/app/hanghoa.js"></script>
-    @*<script src="~/js/site.js"></script>*@
-    <script>
+<script src="~/js/app/hanghoa.js"></script>
+@*<script src="~/js/site.js"></script>*@
+<script>
     var currentPage = @currentPage;
     var pageSize = @pageSize;
-    </script>
+</script>
