--- a/School/WebApplication1/Views/Shared/Pagination.cshtml
+++ b/School/WebApplication1/Views/Shared/Pagination.cshtml
@@ -6,17 +6,13 @@
 
 @model Tuple<int, int, string>
 @{
-    int a = 20;
-    int b = 50;
-    int c = 100;
-    @*@Model.Item2 = b;*@
     var totalPages = Model.Item1 % Model.Item2 == 0 ? Model.Item1 / Model.Item2 : Model.Item1 / Model.Item2 + 1;
 }
 <nav aria-label="Page navigation example" style="margin-top: 0;">
     <p id="TotalRecords" class="pull-left">Total records: @Model.Item1</p>
     <ul class="pagination justify-content-end">
         <li>
-            <select name="number" id="number_id" onchange="DoPaging(1, this.value, '@Model.Item3', @totalPages, 1)">
+            <select name="number" id="number_id" onchange="DoPaging(1, this.value, '@Model.Item3', @totalPages, 1, true)">
                 <option value="20">20</option>
                 <option value="50">50</option>
                 <option value="100">100</option>
@@ -33,7 +29,6 @@
             if (i == 1) active = "active";
             <li id="page" class="page-item @active page-item-@i" index="@i"><a id="bodyClick" class="page-link page-link-@i" onclick="DoPaging(@i, @Model.Item2, '@Model.Item3', @totalPages, 0)" href="#">@i</a></li>
         }
-
 
         <li class="page-item active-next">
             <a class="page-link" onclick="DoPaging(0, @Model.Item2, '@Model.Item3', @totalPages, 2)" href="#">Next</a>
