--- a/School/WebApplication1/Views/ChiTietDH/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/ChiTietDH/_ListPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ChiTietDHModel>
 
-<table class="table tbl-contents">
+<table id="myTableData" class="table tbl-contents">
     <tbody>
         @{
             var count = 0;
@@ -39,3 +39,6 @@
         }
     </tbody>
 </table>
+
+<script src="~/js/FileSaver.js"></script>
+<script src="~/js/Export.js"></script>
