--- a/School/WebApplication1/Views/DonHang/List.cshtml
+++ b/School/WebApplication1/Views/DonHang/List.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "DonHang";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, Model.CurrentPage, "DonHang");
+    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, "DonHang");
     var currentPage = Model.CurrentPage;
     var pageSize = Model.PageSize;
     var data = Model.Data.ToList();
@@ -17,9 +17,11 @@
                         <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(0)">Thêm mới</a>
                     </form>
                     <div class="col-md-10">
+                        <button style="margin-left:849px" type="button" onclick="fnExcelReport('myTableData','data')" class="btn btn-primary">Export Data</button>
+
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group from-inline" style="float:right">
-                                <input placeholder="Nhập" type="text" name="searchkey" id="search-DonHang" onchange="search(event)" class="form-control form-inline" />
+                                <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-DonHang" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="form-control" onclick="search(event)" id="btn-search" />
                             </div>
                         </form>
