--- a/School/WebApplication1/Views/HangHoa/_ListPartial.cshtml
+++ b/School/WebApplication1/Views/HangHoa/_ListPartial.cshtml
@@ -1,35 +1,41 @@
 ﻿@model List<HangHoaModel>
 
-    <table id="myTable" class="table tbl-contents">
-        <tbody>
-            @{
-                var count = 0;
-            }
-            @foreach (var item in Model.ToList())
-            {
-                count++;
-                <tr>
-                    <td class="w-5p">
-                        @count
-                    </td>
-                    <td class="w-15p">
-                        @item.TenHH
-                    </td>
-                    <td class="w-12p">
-                        @item.SoLuong
-                    </td>
-                    <td class="w-10p">
-                        @item.DonGia
-                    </td>
-                    <td class="w-10p">
-                        @item.ChiTiet
-                    </td>
-                    <td class="w-8p">
-                        <a href="#" onclick="ShowAddModal(@item.Id)"><i class="nc-icon nc-scissors"></i></a> |
+<table id="myTableData" class="table tbl-contents">
+    <tbody>
+        @{
+            var count = 0;
+        }
+        @foreach (var item in Model.ToList())
+        {
+            count++;
+            <tr>
+                <td class="w-5p">
+                    @count
+                </td>
+                <td class="w-15p">
+                    @item.TenHH
+                </td>
+                <td class="w-12p">
+                    @item.SoLuong
+                </td>
+                <td class="w-10p">
+                    @item.DonGia
+                </td>
+                <td class="w-10p">
+                    @item.ChiTiet
+                </td>
+                <td class="w-8p">
+                    <a href="#" onclick="ShowAddModal(@item.Id)"><i class="nc-icon nc-scissors"></i></a> |
 
-                        <a href="#" onclick="deleteRecord(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+                    <a href="#" onclick="deleteRecord(@item.Id)"><i class="nc-icon nc-simple-remove"></i></a>
+                </td>
+            </tr>
+        }
+
+    </tbody>
+</table>
+
+
+<script src="~/js/FileSaver.js"></script>
+<script src="~/js/Export.js"></script>
+
