--- a/School/WebApplication1/Views/KhachHang/ListKhachHang.cshtml
+++ b/School/WebApplication1/Views/KhachHang/ListKhachHang.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "KhachHang";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize, Model.CurrentPage,"KhachHang");
+    var paging = Tuple.Create(Model.TotalRecords, Model.PageSize,"KhachHang");
     var currentPage = Model.CurrentPage;
     var pageSize = Model.PageSize;
     var data = Model.Data.ToList();
@@ -17,8 +17,10 @@
                         <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(0)">Thêm mới</a>
                     </form>
                     <div class="col-md-10">
+                        <button style="margin-left:849px" type="button" onclick="fnExcelReport('myTableData','data')" class="btn btn-primary">Export Data</button>
+
                         <form style="width: 300px; padding-top: 11px; " class="pull-right">
-                            <div class="form-group form-inline"  style="float:right">
+                            <div class="form-group form-inline" style="float:right">
                                 <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-khachhang" onchange="search(event)" class="form-control form-inline" />
                                 <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="search(event)" id="btn-search" />
                             </div>
