--- a/School/WebApplication1/wwwroot/css/site.css
+++ b/School/WebApplication1/wwwroot/css/site.css
@@ -79,7 +79,7 @@ body {
     line-height: 60px; /* Vertically center the text there */
 }
 
-/*css scroll
+/*css scroll*/
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
     background-color: #F2F3F3;
@@ -90,16 +90,14 @@ body {
 ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
-    background-color: #0888b1;
-
+    background-color: #51cbce;
 }
 
 ::-webkit-scrollbar-thumb {
     width: 5px;
     border-radius: 2.5px;
-    background-color: #0888b1;
-
-}*/
+    background-color: #51cbce;
+}
 /*end*/
 
 /*common style*/
