--- a/School/WebApplication1/Views/KhachHang/ListKhachHang.cshtml
+++ b/School/WebApplication1/Views/KhachHang/ListKhachHang.cshtml
@@ -17,7 +17,7 @@
                         <a href="#" class="btn btn-primary btn-round" onclick="ShowAddModal(0)">Thêm mới</a>
                     </form>
                     <div class="col-md-10">
-                        <button style="margin-left:849px" type="button" onclick="fnExcelReport('myTableData','data')" class="btn btn-primary">Export Data</button>
+                        <button style="margin-left:849px" type="button" onclick="exportAction('KhachHang/Export')" class="btn btn-primary">Export Data</button>
 
                         <form style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline" style="float:right">
