--- a/School/WebApplication1/Views/Loai/List.cshtml
+++ b/School/WebApplication1/Views/Loai/List.cshtml
@@ -21,7 +21,7 @@
                     </form>
 
                     <div class="col-md-10">
-                        <button style="margin-left:849px" type="button" onclick="fnExcelReport('myTableData','data')" class="btn btn-primary">Export Data</button>
+                        <button style="margin-left:849px" type="button" onclick="exportAction('Loai/Export')" class="btn btn-primary">Export Data</button>
 
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline" style="float:right">
