--- a/School/WebApplication1/Views/HangHoa/List.cshtml
+++ b/School/WebApplication1/Views/HangHoa/List.cshtml
@@ -21,6 +21,11 @@
                     <div class="col-md-10">
                         <button style="margin-left:849px" type="button" onclick="exportAction('HangHoa/Export')" class="btn btn-primary">Export Data</button>
 
+                        <form name="" style="width: 300px; padding-top: 11px; " class="pull-right">
+                            <input id="fileSelect" type="file" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel" />
+                            <input type="submit" name="submit" value="Tìm Kiếm" class="from-control" onclick="importAction(event, 'fileSelect', 'HangHoa/Import')" id="btn-import" />
+                        </form>
+
                         <form name="timkiem" style="width: 300px; padding-top: 11px; " class="pull-right">
                             <div class="form-group form-inline" style="float:right">
                                 <input placeholder="Nhập từ khóa" type="text" name="searchkey" id="search-HangHoa" onchange="search(event)" class="form-control form-inline" />
